Implementação da pagina feed

--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -53,7 +53,7 @@
                     <input type="text" name="titulo" id="titulo" class="form-control" placeholder="Digite seu titulo">
                 </div>
                 <div class="form-group">
-                    <label for="texto">Texto</label>
+                    <label for="texto" c3ass="text-monospace">Texto</label>
                     <textarea name="texto" id="texto" cols="30" rows="4" class="form-control"
                         placeholder="Digite seu texto"></textarea>
                 </div>
