--- a/blogPessoal/src/app/home/home.component.css
+++ b/blogPessoal/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .parallax{
-    background-image: url('https://i.imgur.com/uSxdD8t.jpg');
+    background-image: url('https://i.imgur.com/Sk8SrkE.png');
     min-height: 500px;
     background-attachment: fixed;
     background-position: center;
