--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -43,7 +43,7 @@
 
         </div>
 
-        <div class="col-md-8">
+        <div class="col-md-7">
 
             <div>
                 <h3 class="text-center mb-4 text-monospa">Como tem sido minha experiência na Generation?</h3>
@@ -66,7 +66,7 @@
 
             <hr class="mt-5 mb-5">
 
-            <h3 class="text-monospace text-center mb-5">Minhas Postagens</h3>
+            <h3 class="text-monospace text-center">Minhas Postagens</h3>
 
             <div class="card mb-4" *ngFor='let postagem of listaPostagens'>
                 <div class="card-header">
