--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -50,16 +50,16 @@
 
                 <div class="form-group">
                     <label for="titulo" class="text-monospace">Titulo</label>
-                    <input type="text" name="titulo" id="titulo" class="form-control" placeholder="Digite seu titulo">
+                    <input type="text" name="titulo" id="titulo" class="form-control" placeholder="Digite seu titulo" [(ngModel)]="postagem.titulo">
                 </div>
                 <div class="form-group">
                     <label for="texto" c3ass="text-monospace">Texto</label>
                     <textarea name="texto" id="texto" cols="30" rows="4" class="form-control"
-                        placeholder="Digite seu texto"></textarea>
+                        placeholder="Digite seu texto"[(ngModel)]="postagem.texto"></textarea>
                 </div>
 
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-outline-info w-25">Publicar</button>
+                    <button type="button" class="btn btn-outline-info w-25" (click)="publicar()">Publicar</button>
                 </div>
             </div>
 
