--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -68,7 +68,7 @@
 
             <h3 class="text-monospace text-center">Minhas Postagens</h3>
 
-            <div class="card mb-4" *ngFor='let postagem of listaPostagens'>
+            <div class="card mb-4" *ngFor='let postagem of listaPostagens | orderBy : key : reverse'>
                 <div class="card-header">
                     <h5 class="card-title">{{ postagem.titulo}}</h5>
                 </div>
