--- a/blogPessoal/src/app/editar/editar.component.html
+++ b/blogPessoal/src/app/editar/editar.component.html
@@ -29,13 +29,7 @@
                     <a href="https://github.com/pricillabomanni"
                         class="btn btn-outline-dark d-flex justify-content-center" target="_blank">GitHub</a>
 
-                    <hr class="mt-4 mb-4">
-
-                    <h6 class="mb-3 text-monospace text-center">Pesquisar por titulo</h6>
-
-                    <input type="text" class="form-control mb-3 w-100" placeholder="Pesquisar postagem">
-
-                    <button class="btn btn-outline-warning w-100" type="button">Pesquisar</button>
+                    
 
                 </div>
 
@@ -43,10 +37,10 @@
 
         </div>
 
-        <div class="col-md-7">
+        <div class="col-md-8">
 
             <div>
-                <h3 class="text-center mb-4 text-monospa">Como tem sido minha experiência na Generation?</h3>
+                <h3 class="text-center mb-4 text-monospa">Edição de Postagem</h3>
 
                 <div class="form-group">
                     <label for="titulo" class="text-monospace">Titulo</label>
@@ -59,41 +53,10 @@
                 </div>
 
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-outline-info w-25" (click)="publicar()">Publicar</button>
+                    <button type="button" class="btn btn-outline-info w-25" (click)="salvar()">Salvar</button>
                 </div>
             </div>
-
-
-            <hr class="mt-5 mb-5">
-
-            <h3 class="text-monospace text-center">Minhas Postagens</h3>
-
-            <div class="card mb-4" *ngFor='let postagem of listaPostagens | orderBy : key : reverse'>
-
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <h5 class="card-title">{{ postagem.titulo}}</h5>
-                        </div>
-
-                        <div class="col-md-4 d-flex justify-content-end">  
-
-                            <button class="btn btn-outline-info" [routerLink] = "['/editar', postagem.id]" >
-                                Editar
-                            </button>
-     
-                        </div>
-
-                    </div>
-
-                </div>
-                <div class="card-body">
-                    <p class="card-text">{{ postagem.texto}}</p>
-                <small class="form-text m-0 text-muted mb-3 text-monospace"> Postado em {{postagem.data | date: 'dd/MM/yyyy'}} às {{postagem.data | date: 'HH:mm'}}  </small>
-                    
-                </div>
-            </div>
-
+            
         </div>
     </div>
 
