--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -33,9 +33,9 @@
 
                     <h6 class="mb-3 text-monospace text-center">Pesquisar por titulo</h6>
 
-                    <input type="text" class="form-control mb-3 w-100" placeholder="Pesquisar postagem">
+                    <input type="text" class="form-control mb-3 w-100" placeholder="Pesquisar postagem" [(ngModel)] = "titulo">
 
-                    <button class="btn btn-outline-warning w-100" type="button">Pesquisar</button>
+                    <button class="btn btn-outline-warning w-100" type="button" (click) = pesquisarPorTitulo()>Pesquisar</button>
 
                 </div>
 
