--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -16,7 +16,7 @@
 
                 <div class="card-body">
 
-                    <h5 class="card-title text-center">Pricilla Bomanni</h5>
+                    <h5 class="card-title text-center">{{nome}}</h5>
 
                     <p class="card-text text-center">Estudante da turma amarela e arquiteta.Estou amando migrar de
                         carreira.</p>
